{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 14,
  "lineage": "1e6fbb40-d2af-d5a4-4fcb-31958323e55b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "web_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:internet-gateway/igw-0f32e88f3ab4768e1",
            "id": "igw-0f32e88f3ab4768e1",
            "owner_id": "891612549865",
            "tags": {
              "Name": "workbook-importer-igw"
            },
            "tags_all": {
              "Name": "workbook-importer-igw"
            },
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:route-table/rtb-005a165d8cdfe55e6",
            "id": "rtb-005a165d8cdfe55e6",
            "owner_id": "891612549865",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f32e88f3ab4768e1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "workbook-importer-public-rt"
            },
            "tags_all": {
              "Name": "workbook-importer-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b025b77960a717c5",
            "route_table_id": "rtb-005a165d8cdfe55e6",
            "subnet_id": "subnet-0e28e06b1c5c88bc4"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ce42547703194c5",
            "route_table_id": "rtb-005a165d8cdfe55e6",
            "subnet_id": "subnet-00273ad6f3badbec2"
          },
          "dependencies": [
            "aws_internet_gateway.web_igw",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:security-group/sg-0b266e9dea9c92471",
            "description": "Allow incoming HTTP traffic from the internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b266e9dea9c92471",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "workbook-importer-elb-sg",
            "name_prefix": "",
            "owner_id": "891612549865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workbook-importer-elb-sg"
            },
            "tags_all": {
              "Name": "workbook-importer-elb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:security-group/sg-075b24a80917a05d2",
            "description": "Allow HTTP traffic from ELB and SSH for management",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-075b24a80917a05d2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH access for management",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow Flask app traffic (port 5001) from the load balancer",
                "from_port": 5001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b266e9dea9c92471"
                ],
                "self": false,
                "to_port": 5001
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP traffic from the load balancer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b266e9dea9c92471"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "workbook-importer-web-sg",
            "name_prefix": "",
            "owner_id": "891612549865",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "workbook-importer-web-sg"
            },
            "tags_all": {
              "Name": "workbook-importer-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.elb_sg",
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:subnet/subnet-0e28e06b1c5c88bc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.100.128/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e28e06b1c5c88bc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612549865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workbook-importer-public-subnet-1"
            },
            "tags_all": {
              "Name": "workbook-importer-public-subnet-1"
            },
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:subnet/subnet-00273ad6f3badbec2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "192.168.100.192/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00273ad6f3badbec2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891612549865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workbook-importer-public-subnet-2"
            },
            "tags_all": {
              "Name": "workbook-importer-public-subnet-2"
            },
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:subnet/subnet-0e95b76fde35a365e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "192.168.100.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e95b76fde35a365e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612549865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workbook-importer-subnet-1"
            },
            "tags_all": {
              "Name": "workbook-importer-subnet-1"
            },
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:subnet/subnet-0ab9450987bba54c5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "192.168.100.64/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab9450987bba54c5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891612549865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "workbook-importer-subnet-2"
            },
            "tags_all": {
              "Name": "workbook-importer-subnet-2"
            },
            "vpc_id": "vpc-0f60097e2f5f64d75"
          },
          "dependencies": [
            "aws_vpc.web_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "web_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:891612549865:vpc/vpc-0f60097e2f5f64d75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.100.0/24",
            "default_network_acl_id": "acl-055386c438f2cd34f",
            "default_route_table_id": "rtb-0b3ffaaf556f36e9f",
            "default_security_group_id": "sg-0799a4d7b43df7dfb",
            "dhcp_options_id": "dopt-0ee8abe6ca754b3bc",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f60097e2f5f64d75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3ffaaf556f36e9f",
            "owner_id": "891612549865",
            "tags": {
              "Name": "workbook-importer-vpc"
            },
            "tags_all": {
              "Name": "workbook-importer-vpc"
            }
          }
        }
      ]
    }
  ]
}